--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mumbler",
+	"name": "mumbler-api",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -13,11 +13,11 @@
 		"express": "^4.18.2",
 		"mysql2": "^3.6.1",
 		"tsc-alias": "^1.8.7",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"@types/bcrypt": "^5.0.0",
+		"@types/express": "^4.17.17"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "^5.0.0",
-		"@types/express": "^4.17.17",
 		"@typescript-eslint/parser": "^5.61.0",
 		"eslint": "^8.44.0",
 		"eslint-config-prettier": "^8.8.0",
